@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id("io.papermc.paperweight.userdev") version "${paperweight_version}"
+    id("xyz.jpenilla.run-paper") version "2.3.1"
     // id 'com.gradleup.shadow' version '9.0.0-beta4'
 }
 
@@ -59,10 +60,21 @@ tasks.withType(JavaCompile).configureEach {
     }
 }
 
+tasks.named("runServer") {
+    jvmArgs += [
+            '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED' // ain't actually needed :thumbs_up:
+    ]
+}
+
 jar {
     destinationDirectory.set(file("C:/Minecraft Servers/Paper Plugin Test Server/plugins"))
     archiveFileName = "${getArchiveBaseName().get()}-${getArchiveVersion().get()}+${minecraft_version}.${getArchiveExtension().get()}"
 }
+
+//shadowJar {
+//    destinationDirectory.set(file("C:/Minecraft Servers/Paper Plugin Test Server/plugins"))
+//    archiveFileName = "${getArchiveBaseName().get()}-${getArchiveVersion().get()}+${minecraft_version}.${getArchiveExtension().get()}"
+//}
 
 processResources {
     def props = [version: version]
